// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShadowsocksParser > should parse a legacy shadowsocks URL 1`] = `
{
  "auth": {
    "method": "aes-256-gcm",
    "password": "testpassword",
  },
  "host": "example.com",
  "kind": "shadowsocks",
  "method": "aes-256-gcm",
  "password": "testpassword",
  "port": 8080,
  "server": "example.com",
  "server_port": 8080,
  "tag": "MyLegacyNode",
  "tags": [
    "MyLegacyNode",
  ],
  "type": "shadowsocks",
  "version": "1.0.0",
}
`;

exports[`ShadowsocksParser > should parse a modern shadowsocks URL 1`] = `
{
  "auth": {
    "method": "aes-256-gcm",
    "password": "testpassword",
  },
  "host": "example.com",
  "kind": "shadowsocks",
  "method": "aes-256-gcm",
  "password": "testpassword",
  "port": 8080,
  "server": "example.com",
  "server_port": 8080,
  "tag": "MyShadowsocksNode",
  "tags": [
    "MyShadowsocksNode",
  ],
  "type": "shadowsocks",
  "version": "1.0.0",
}
`;
